# Hyperion-Math

./: CMakeLists.txt
include/HyperionMath/: Constants.h  Exponentials.h  General.h  HyperionMath.h  Interpolator.h  Point2.h  Point3.h  Random.h  Trig.h  Vec2.h  Vec3.h
test/: CMakeLists.txt
test/src/: ExponentialsTestDouble.h  ExponentialsTestFloat.h  GeneralTestDouble.h  GeneralTestFloat.h  InterpolatorTest.h  Test.cpp  TestConstants.h  TrigTestDouble.h  TrigTestFloat.h  Vec2Test.h  Vec3Test.h
